--- a/app/croissance.component.html
+++ b/app/croissance.component.html
@@ -4,4 +4,6 @@
             <canvas #canvasCroissance height="700px" (click)="commencerForet($event)"></canvas>
         </div>
     </div>
+    
+    <optionsCroissance>Loading options panel...</optionsCroissance>
 </div>
